	- Slovenian translation by Jernej Kovacic
	- improve focus handling on non-xinerama multihead displays
	- another submenu/icon handling fix for gnome menus (Thomas Zajic)
	- added nonICCCMconfigureRequest window option workaround for 
          non ICCCM compliant applications
	- WINDOW_ROLE handling for winoptions (Stanislav Svirid)
	- fix crash in mail status checker in pop/imap configuration

1.2.5: 2003-01-05
	- fix lockup when doing operations through window list
	- fix compile problem --with-xpm
	- fix icesh.cc focus handling (by Todd R. Eigenschink)
	- update workaround for some TK issues
	- slow startup fix (caused by broken lazy menu loading)

1.2.4: 2003-01-03
	- fixed submenu/icon handling for gnome menus (Thomas Zajic)
	- acpi optimization (Michal Ceresna)
	- fix crash in "Tile ..."
	- fix submenu deactivation problem (reported by Bernhard Walle)
	- fix focus loss on xmms exit (reported by Bernhard Walle)
	- fix problem with restarting the wm (when icewm-menu-gnome1 not
          present)

1.2.3: 2002-12-26
	- IMPORTANT: system configuration directory changed to
          /etc/icewm (from /etc/X11/icewm or /usr/local/etc/X11/icewm).
          icewm now installs it's data files in /usr/local/share/icewm.
        - added --disable-winmenu and --disable-taskbar configure options
	- bug fixes in menu code
	- fixed lockup when running under session manager (GNOME2)

1.2.3pre2: 2002-12-15
	- support for Xinerama
	- rewritten RPM packaging
	- new "menuprog" statement in menu files for reading a submenu
          from a pipe
	- Italian translation update
	- moved gnome menu support into an external utility (icewm-menu-gnome1)
          (used trough "menuprog", requires gnome 1.x)
	- added keybinding for showing the window list menu (KeySysWinListMenu)

1.2.3pre1: 2002-10-20 + soon
        - some small fixes for the swedish translation (tucker)
	- new APM/ACPI monitor code by Michal Ceresna (cemi)
        - Norwegian translation by Petter Johan Olsen